z-index issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -216,7 +216,7 @@ $site-logo-height: em(220px);
 .site-title {
     display: inline-block;
     position: absolute;
-    z-index: 3;
+    z-index: 4;
     left: $spacing-unit;
     top: 0;
     width: $site-logo-width;
